codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
Active agent: Default session (session)
Model: gpt-5.2-codex | Tools: inherit parent session
Switch agents with ":use-agent <id>" or restart with "--use-subagent <id>" (see
`codex agents list`).
Inspect transcripts + resume tokens with `codex agents resume-status`.


  Select Approval Mode

› 1. Read Only (current)  Requires approval to edit files and run commands.
  2. Agent                Read and edit files, and run commands.
  3. Agent (full access)  Codex can edit files outside this workspace and run
                          commands with network access. Exercise caution when
                          using.

  Press enter to confirm or esc to go back
