codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"Active agent: Default session (session) "
"Model: gpt-5.2-codex | Tools: inherit   "
