codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_tall.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
Active agent: Default session (session)
Model: gpt-5.2-codex | Tools: inherit parent session
Switch agents with ":use-agent <id>" or restart with "--use-subagent <id>" (see
`codex agents list`).
Inspect transcripts + resume tokens with `codex agents resume-status`.

• Working (0s • esc to interrupt)
  ↳ Hello, world! 0
  ↳ Hello, world! 1
  ↳ Hello, world! 2
  ↳ Hello, world! 3
  ↳ Hello, world! 4
  ↳ Hello, world! 5
  ↳ Hello, world! 6
  ↳ Hello, world! 7
  ↳ Hello, world! 8
  ↳ Hello, world! 9
  ↳ Hello, world! 10
  ↳ Hello, world! 11


› Ask Codex to do anything

  100% context left · ? for shortcuts
