codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 18 },
    content: [
        "Active agent: Default session (session)                                         ",
        "Model: gpt-5.2-codex | Tools: inherit parent session                            ",
        "Switch agents with ":use-agent <id>" or restart with "--use-subagent <id>" (see ",
        "`codex agents list`).                                                           ",
        "Inspect transcripts + resume tokens with `codex agents resume-status`.          ",
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell Codex what to do differently (esc)                            ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 79, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 70, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 73, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
